redhatframework-app.mdapi/objects/Decimal2_Values__mdt.object
<CustomObject>
    <label>Decimal2 Value</label>
    <pluralLabel>Decimal2 Values</pluralLabel>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <validationRules>
        <fullName>Validate_Label</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(BEGINS( Source__c+&apos;.&apos;+ Key__c, MasterLabel))</errorConditionFormula>
        <errorDisplayField>MasterLabel</errorDisplayField>
        <errorMessage>Label must be of the form Source.Key.</errorMessage>
    </validationRules>
    <listViews>
        <fullName>APTS_NAT</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Source__c</columns>
        <columns>Key__c</columns>
        <columns>Value__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DeveloperName</field>
            <operation>startsWith</operation>
            <value>APTS_NAT_</value>
        </filters>
        <label>APTS_NAT</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>APTS_SKU_Status</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Source__c</columns>
        <columns>Key__c</columns>
        <columns>Value__c</columns>
        <columns>Active__c</columns>
        <columns>NamespacePrefix</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DeveloperName</field>
            <operation>startsWith</operation>
            <value>APTS_SKU_Status_</value>
        </filters>
        <label>APTS SKU Status</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Key__c</columns>
        <columns>Source__c</columns>
        <columns>Value__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>